Replace more files

--- a/PrepMe/tutorial page/tutorialPage.html
+++ b/PrepMe/tutorial page/tutorialPage.html
@@ -48,7 +48,7 @@
 
             <div id="tutStepsDiv">
                 <div class="tutButs">
-<!--                    <img src="../svgs/leftBut.svg" alt="Left Button" id="leftBut" onclick="prevStep()"/>-->
+                    <img src="../svgs/leftBut.svg" alt="Left Button" id="leftBut" onclick="prevStep()"/>
                 </div>
                 <div id="tutAnim">
 
